--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "server": "json-server --watch server/db.json --routes server/routes.json"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.0-rc.1",
     "axios": "^1.3.6",
     "firebase": "^9.20.0",
     "json-server": "^0.17.3",
     "pinia": "^2.0.35",
     "primeicons": "^6.0.1",
-    "primevue": "^3.27.0",
+    "primevue": "^4.0.0-rc.1",
     "vue": "^3.2.47",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.3.0"
